--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,6 +1,5 @@
 env:
   repo:         "https://github.com/akhasa2001/ecom.git"
-  app_version:  "2.0.0"
   project_id:   "csubrsnzorjkvdca"
   repo_region:  "us-central1"
   app_name:     "ecom"
@@ -18,7 +17,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    inputs:
+      app_version:
+        description: 'App version'
+        required: true
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
