--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,6 +1,6 @@
 env:
-  repo:         "https://github.com/akhasa2001/ecom.git"
-  project_id:   "csubrsnzorjkvdca"
+  repo:         "https://github.com/akhasa2001/simple-website.git"
+  project_id:   "terraform-project-akhasa1"
   repo_region:  "us-central1"
   app_name:     "ecom"
 
