--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -28,17 +28,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-      # Runs a set of commands using the runners shell
-      - name: Clone a repo
-        working-directory: ${{ env.app_name }}
-        run: |
-          git clone ${{ env.repo }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      # # Runs a set of commands using the runners shell
+      # - name: Clone a repo
+      #   working-directory: ${{ env.app_name }}
+      #   run: |
+      #     git clone ${{ env.repo }}
 
       # Runs a set of commands using the runners shell
       - name: Switch Branches
