--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -44,48 +44,46 @@ jobs:
         working-directory: ${{ env.app_name }}
         run: |
           ls
-          git checkout 3.0.0
-          ls -l
 
 
 
-      # Runs a set of commands using the runners shell
-      - name: Build Image
-        working-directory: ${{ env.app_name }}
-        run: |
-          docker build -t ${{ env.app_name }}:${{ env.app_version }}   . 
+      # # Runs a set of commands using the runners shell
+      # - name: Build Image
+      #   working-directory: ${{ env.app_name }}
+      #   run: |
+      #     docker build -t ${{ env.app_name }}:${{ env.app_version }}   . 
 
 
-      # Runs a set of commands using the runners shell
-      - name: Tag Image
-        working-directory: ${{ env.app_name }}
-        run: |
-          docker image tag ${{ env.app_name }}:${{ env.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}     
+      # # Runs a set of commands using the runners shell
+      # - name: Tag Image
+      #   working-directory: ${{ env.app_name }}
+      #   run: |
+      #     docker image tag ${{ env.app_name }}:${{ env.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}     
 
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: gcloud version 
-
-
-
-      - name: Authenticate to Google account
-        run: |
-          gcloud auth activate-service-account --key-file="service-account.json"
-          gcloud config set project ${{ env.project_id }}
+      # # Runs a single command using the runners shell
+      # - name: Run a one-line script
+      #   run: gcloud version 
 
 
 
-      - name: Authenticate to repository
-        run: |
-          gcloud auth configure-docker  ${{ env.repo_region }}-docker.pkg.dev
+      # - name: Authenticate to Google account
+      #   run: |
+      #     gcloud auth activate-service-account --key-file="service-account.json"
+      #     gcloud config set project ${{ env.project_id }}
+
+
+
+      # - name: Authenticate to repository
+      #   run: |
+      #     gcloud auth configure-docker  ${{ env.repo_region }}-docker.pkg.dev
 
           
 
 
-      # Runs a set of commands using the runners shell
-      - name: Image push
-        working-directory: ${{ env.app_name }}
-        run: |
-          docker push ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}  
+      # # Runs a set of commands using the runners shell
+      # - name: Image push
+      #   working-directory: ${{ env.app_name }}
+      #   run: |
+      #     docker push ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}  
 
