--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -43,15 +43,15 @@ jobs:
       - name: Switch Branches
         working-directory: ${{ env.app_name }}
         run: |
-          git checkout 3.0.0
+          git checkout ${{env.app_version}}
 
 
 
-      # # Runs a set of commands using the runners shell
-      # - name: Build Image
-      #   working-directory: ${{ env.app_name }}
-      #   run: |
-      #     docker build -t ${{ env.app_name }}:${{ env.app_version }}   . 
+      # Runs a set of commands using the runners shell
+      - name: Build Image
+        working-directory: ${{ env.app_name }}
+        run: |
+          docker build -t ${{ env.app_name }}:${{ env.app_version }}   . 
 
 
       # # Runs a set of commands using the runners shell
