--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Switch Branches
         working-directory: ${{ env.app_name }}
         run: |
-          git checkout ${{env.app_version}}
+          git checkout ${{ github.event.inputs.app_version }}
 
 
 
@@ -51,14 +51,14 @@ jobs:
       - name: Build Image
         working-directory: ${{ env.app_name }}
         run: |
-          docker build -t ${{ env.app_name }}:${{ env.app_version }}   . 
+          docker build -t ${{ env.app_name }}:${{ github.event.inputs.app_version }}   . 
 
 
       # # Runs a set of commands using the runners shell
       # - name: Tag Image
       #   working-directory: ${{ env.app_name }}
       #   run: |
-      #     docker image tag ${{ env.app_name }}:${{ env.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}     
+      #     docker image tag ${{ env.app_name }}:${{ github.event.inputs.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ github.event.inputs.app_version }}    
 
 
       # # Runs a single command using the runners shell
