--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -54,23 +54,25 @@ jobs:
           docker build -t ${{ env.app_name }}:${{ github.event.inputs.app_version }}   . 
 
 
-      # # Runs a set of commands using the runners shell
-      # - name: Tag Image
-      #   working-directory: ${{ env.app_name }}
-      #   run: |
-      #     docker image tag ${{ env.app_name }}:${{ github.event.inputs.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ github.event.inputs.app_version }}    
+      # Runs a set of commands using the runners shell
+      - name: Tag Image
+        working-directory: ${{ env.app_name }}
+        run: |
+          docker image tag ${{ env.app_name }}:${{ github.event.inputs.app_version }} ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ github.event.inputs.app_version }}    
 
 
-      # # Runs a single command using the runners shell
-      # - name: Run a one-line script
-      #   run: gcloud version 
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: gcloud version 
 
+      # Here, we'll create the service account JSON file from the secret
+      - name: Create service account JSON file
+        run: echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" > service-account.json
 
-
-      # - name: Authenticate to Google account
-      #   run: |
-      #     gcloud auth activate-service-account --key-file="service-account.json"
-      #     gcloud config set project ${{ env.project_id }}
+      - name: Authenticate to Google account
+        run: |
+          gcloud auth activate-service-account --key-file="service-account.json"
+          gcloud config set project ${{ env.project_id }}
 
 
 
