--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -76,8 +76,8 @@ jobs:
 
       - name: Authenticate to Google account
         run: |
-          echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | gcloud auth activate-service-account --key-file=-
-          gcloud config set project ${{ env.project_id }}
+          # Decode base64 encoded service account key
+          echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 -d > service-account.json
 
 
       # - name: Authenticate to repository
