completed CD pipeline

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -69,32 +69,29 @@ jobs:
       # - name: Create service account JSON file
       #   run: echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | jq '.' > service-account.json
 
-      - name: Authenticate to Google account
+      - name: create service-account.json file
         run: |
           # Decode base64 encoded service account key
           echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 -d > service-account.json
 
-          gcloud auth activate-service-account --key-file=service-account.json
+
+      - name: Authenticate to Google account
+        run: |
+          gcloud auth activate-service-account --key-file="service-account.json"
           gcloud config set project ${{ env.project_id }}
 
 
-      # - name: Authenticate to Google account
-      #   run: |
-      #     gcloud auth activate-service-account --key-file="service-account.json"
-      #     gcloud config set project ${{ env.project_id }}
 
-
-
-      # - name: Authenticate to repository
-      #   run: |
-      #     gcloud auth configure-docker  ${{ env.repo_region }}-docker.pkg.dev
+      - name: Authenticate to repository
+        run: |
+          gcloud auth configure-docker  ${{ env.repo_region }}-docker.pkg.dev
 
           
 
 
-      # # Runs a set of commands using the runners shell
-      # - name: Image push
-      #   working-directory: ${{ env.app_name }}
-      #   run: |
-      #     docker push ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}  
+      # Runs a set of commands using the runners shell
+      - name: Image push
+        working-directory: ${{ env.app_name }}
+        run: |
+          docker push ${{ env.repo_region }}-docker.pkg.dev/${{ env.project_id }}/${{ env.app_name }}/${{ env.app_name }}:${{ env.app_version }}  
 
